Fix #2381 -- Adjust header nav padding to align borders

--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -541,7 +541,7 @@ header {
         transition: max-height 0.3s ease-out;
         max-height: 0; // hide mobile menu by default
         overflow: hidden;
-
+        padding: 0 2px;
         &.active {
             max-height: 580px;
         }
